completed the registration route

--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 dbURI = mongodb://localhost:27017/Nexus
-USERMAIL = pascalanthony643@gmail.com
-USER_PASSWORD = aqcz iinc vpcr zymv
+USERMAIL = chinyereozoemelam2@gmail.com
+USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
 AUTHSECRET = QWERTYUIOPPOIUYTREWQ
 MAIL_SERVICE = gmail
