--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
