--- a/Server/.env
+++ b/Server/.env
@@ -1,9 +1,9 @@
-dbURI = mongodb://localhost:27017/Nexus
+dbURI = mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/Nexus?retryWrites=true&w=majority&appName=Cluster0
 USERMAIL = chinyereozoemelam2@gmail.com
 USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
 AUTHSECRET = QWERTYUIOPPOIUYTREWQ
 MAIL_SERVICE = gmail
-# BASE_URL = https://thevault-ae9i.onrender.com
+BASE_URL = https://nexus.onrender.com
 # mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/CampusMind?retryWrites=true&w=majority&appName=Cluster0
 # mongodb://localhost:27017/Verifai
