--- a/Server/.env
+++ b/Server/.env
@@ -4,6 +4,6 @@ USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
 AUTHSECRET = QWERTYUIOPPOIUYTREWQ
 MAIL_SERVICE = gmail
-BASE_URL = https://nexus.onrender.com
+BASE_URL = https://nexus-eam2.onrender.com
 # mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/CampusMind?retryWrites=true&w=majority&appName=Cluster0
 # mongodb://localhost:27017/Verifai
