--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-dbURI = mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/Nexus?retryWrites=true&w=majority&appName=Cluster0
+dbURI = mongodb://localhost:27017/Nexus
 USERMAIL = chinyereozoemelam2@gmail.com
 USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
