--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-dbURI = mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/CampusMind?retryWrites=true&w=majority&appName=Cluster0
+dbURI = mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/Nexus?retryWrites=true&w=majority&appName=Cluster0 
 USERMAIL = chinyereozoemelam2@gmail.com
 USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
@@ -6,4 +6,5 @@ AUTHSECRET = QWERTYUIOPPOIUYTREWQ
 MAIL_SERVICE = gmail
 BASE_URL = https://nexus-eam2.onrender.com
 # mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/CampusMind?retryWrites=true&w=majority&appName=Cluster0
+# mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/Nexus?retryWrites=true&w=majority&appName=Cluster0 
 # mongodb://localhost:27017/Nexus
