--- a/Server/.env
+++ b/Server/.env
@@ -4,7 +4,7 @@ USER_PASSWORD = dgss chpf mulq dcjd
 JWTSECRET = qwertyuiopasdfghjkl
 AUTHSECRET = QWERTYUIOPPOIUYTREWQ
 MAIL_SERVICE = gmail
-BASE_URL = https://nexus-eam2.onrender.com
+BASE_URL = https://nexus-66h0.onrender.com/
 # mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/CampusMind?retryWrites=true&w=majority&appName=Cluster0
 # mongodb+srv://Opia-Precious:AIChatPro@cluster0.1jygyse.mongodb.net/Nexus?retryWrites=true&w=majority&appName=Cluster0 
 # mongodb://localhost:27017/Nexus
